Submitting the files I have for Milestone 3. Inserting into the database does not work yet.

--- a/public/form.html
+++ b/public/form.html
@@ -24,7 +24,7 @@
     <br>
     <br>
     <h2>Enter Diaper</h2>
-	<form action="">
+	<form action="/insertDiaper" method="post">
 		First Name: <input type="text" name="fname" id="fnameInsert">
 		<br>
 		<br>
