--- a/public/form.html
+++ b/public/form.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Baby Tracker</title>
 	<script type="text/javascript" src="diapersAjax.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
 	<h2>View Recent Diapers</h2>
@@ -24,7 +25,7 @@
     <br>
     <br>
     <h2>Enter Diaper</h2>
-	<form action="/insertDiaper" method="post">
+	<form>
 		First Name: <input type="text" name="insertFirst" id="insertFirst">
 		<br>
 		<br>
@@ -42,7 +43,7 @@
 			<option value="4">Mixed</option>
 		</select>
 		
-		<input type="submit" value="Enter Diaper">
+		<input type="button" name="enterDiaper" value="Enter Diaper" id="enterDiaper" onclick="enterDiaper()">
 	</form>
 </body>
 </html>
